--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Alien::scriptaculous.
 
+1.7.0   Fri Jun 29 11:24 PDT 2007
+    - Updated to script.aculo.us 1.7.0
+
 1.6.5   Fri Jun 29 10:58 PDT 2007
     - Switched versioning scheme to match that of script.aculo.us
 
