--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Alien::scriptaculous.
 
-???
+1.7.1_3 Tue Jul 17 20:52 PDT 2007
+    - Updated to script.aculo.us 1.7.1_beta3
     - removed un-necessary "use" statements and imports from MY::Build
 
 1.7.0   Fri Jun 29 11:24 PDT 2007
