Added POD coverage tests.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 Revision history for Perl extension Alien::scriptaculous.
 
+    - added POD coverage tests
+
 1.7.1.1_3   Sun Sep 30 13:30 PDT 2007
     - added POD docs to Alien::scriptaculous
     - added "--quiet" command line argument to "scriptaculous-install"
