--- a/Changes
+++ b/Changes
@@ -1,6 +1,8 @@
 Revision history for Perl extension Alien::scriptaculous.
 
     - added POD coverage tests
+    - now depends on Alien::Prototype, instead of using the version that came
+      bundled with script.aculo.us.
 
 1.7.1.1_3   Sun Sep 30 13:30 PDT 2007
     - added POD docs to Alien::scriptaculous
