--- a/Changes
+++ b/Changes
@@ -5,6 +5,8 @@ Revision history for Perl extension Alien::scriptaculous.
       bundled with script.aculo.us.
     - fix dependency on Archive::Tar; its a -build- dependency, not a
       -configuration- dependency
+    - added "passthrough" Makefile.PL; we -NEED- to have Module::Build
+      installed, auto-generated compatibility Makefile.PLs are insufficient
 
 1.7.1.1_3   Sun Sep 30 13:30 PDT 2007
     - added POD docs to Alien::scriptaculous
