--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Alien::scriptaculous.
 
+1.8.0.2     ???
+    - Switch to Git
+
 1.8.0.1     Fri Dec  7 21:46 PST 2007
     - update to script.aculo.us 1.8.0 final
 
