--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Alien::scriptaculous.
 
-1.8.0.2     ???
+1.8.0.2     Fri Apr 23 22:24 PDT 2010
     - Switch to Git
 
 1.8.0.1     Fri Dec  7 21:46 PST 2007
