--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl extension Alien::scriptaculous.
 
-1.8.0.3     ????
+1.8.0.3     Mon Feb 15 12:23 PST 2011
     - DEPRECATED; DO NOT USE
     - Move to GitHub
 
